# slim-antix

./: CMakeLists.txt  Ck.cpp  Ck.h  OPTIONS_LIST.txt  PAM.cpp  PAM.h  README  TODO  app.cpp  app.h  capslock.cpp  capslock.h  cfg.cpp  cfg.h  const.h  image.cpp  image.h  log.cpp  log.h  main.cpp  panel.cpp  panel.h  png.c  slim.1  slim.conf  slim_1.4.2_amd64.deb  slim_1.4.4_amd64.deb  slim_1.4.5_amd64.deb  switchuser.cpp  switchuser.h  util.cpp  util.h  xinitrc.sample
cmake/modules/: FONTCONFIGConfig.cmake
debian/: README.Debian  changelog  control  files  rules  rules_BACKUPCOPY  slim.config  slim.dirs  slim.docs  slim.init  slim.install  slim.install_BACKUPCOPY  slim.logrotate  slim.pam  slim.prerm  slim.substvars  slim.templates
debian/antiX/: slim.theme
debian/custom/: antixccslim.sh  slim-login  slim-login.changelog  slim-login.old  slim.template  slim_login.desktop  slim_wallpaper.desktop
debian/custom/Xsession.d/: 20slim_locale
debian/patches/: series
debian/po/: ca.po  cs.po  de.po  el.po  es.po  eu.po  fr.po  gl.po  it.po  ja.po  ko.po  ml.po  nl.po  pt_BR.po  ro.po  ru.po  sk.po  sv.po  ta.po  tr.po  vi.po  zh_CN.po
doc/: CMakeLists.txt  ChangeLog  ChangeLog_slim.txt  INSTALL  OPTIONS_LIST.txt  THEMES  TODO  pam.sample  slim.1  tips_.xinitrc  xinitrc.sample  xinitrc.sample2
themes/: CMakeLists.txt
themes/antiX/: CMakeLists.txt  slim.theme
themes/default/: slim.theme
themes/flat/: CMakeLists.txt  slim.theme
themes/wut/: CMakeLists.txt  slim.theme
